--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,30 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'})
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
+
+        //DISEÑO
+        implementation 'com.android.support:recyclerview-v7:28.0.0'//lista
+        implementation 'com.android.support:cardview-v7:28.0.0'  //tarjeta
+
+        //firebase
+        implementation'com.google.firebase:firebase-database:16.1.0' //base datos
+        implementation 'com.google.firebase:firebase-storage:16.1.0' //base de archivos
+        implementation 'com.google.firebase:firebase-auth:16.2.0'
+
+        //Agregados
+
+        implementation 'de.hdodenhof:circleimageview:2.2.0'
+        implementation 'com.github.bumptech.glide:glide:4.6.1'
+
+    implementation 'com.google.firebase:firebase-core:16.0.8'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
 }
